[workspace]

members = [
    "lib/disarray",
    "lib/later",
    "lib/racy_cell",
    "lib/lz77",
    "lib/plugin_ini",
    "lib/skse64_common",
    "lib/skse64",
    "lib/versionlib",
    "lib/skyrim_patcher",
    "lib/vdb-dump",
    "SkyrimUncapper"
]

[profile.release]
panic = "abort"
debug = false
strip = true
incremental = false
opt-level = 'z'
codegen-units = 1
lto = 'fat'

[profile.dev]
panic = "abort"
debug = true
incremental = false
# O0 is just impossible to read.
opt-level = 1
lto = 'thin'
