[workspace]

members = [
    "lib/core-util",
    "lib/cstdio",
    "lib/deflate",
    "lib/plugin_ini",
    "lib/sre-common",
    "lib/skse64",
    "lib/skyrim_patcher",
    "vdb-dump",
    "SkyrimUncapper"
]

[profile.release]
panic = "abort"
debug = false
strip = true
incremental = false
opt-level = 'z'
codegen-units = 1
lto = 'fat'

[profile.dev]
panic = "abort"
debug = true
incremental = false
# O0 is just impossible to read.
opt-level = 1
lto = 'thin'
