[package]
name = "SkyrimUncapper"
version = "2.2.1"
edition = "2021"

[lib]
name = "SkyrimUncapper"
crate-type = ["cdylib"]

[dependencies]
core-util = { path = "../lib/core-util" }
deflate = { path = "../lib/deflate" }
plugin_ini = { path = "../lib/plugin_ini" }
skse64 = { path = "../lib/skse64" }
skyrim_patcher = { path = "../lib/skyrim_patcher" }
libc = "0.2.147"
libm = "0.2.7"

[build-dependencies]
winres = "0.1.12"
embed-resource = "1.8.0"
cc = "1.0.79"
deflate = { path = "../lib/deflate" }
