[package]
name    = "SkyrimUncapper"
version = "2.2.1"
edition = "2021"

[lib]
name       = "SkyrimUncapper"
crate-type = ["cdylib"]

[dependencies]
core-util = { path = "../lib/core-util" }
deflate   = { path = "../lib/deflate"   }
libskyrim = { path = "../lib/libskyrim" }
libm      = "0.2.7"

[build-dependencies]
winres         = "0.1.12"
embed-resource = "1.8.0"
deflate        = { path = "../lib/deflate" }
