[package]
name = "skse64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dirs-next = "2.0.0"
later = { path = "../later" }
ctypes = { path = "../ctypes" }

[build-dependencies]
bindgen = "0.63.0"
vsprofile = { path = "../vsprofile" }
