[package]
name = "skse64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
later = { path = "../later" }

[dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader"
]

[build-dependencies]
bindgen = "0.63.0"
vsprofile = { path = "../vsprofile" }
