[package]
name = "libskyrim"
version = "1.1.0"
edition = "2021"

[dependencies]
core-util  = { path = "../core-util"  }
cstdio     = { path = "../cstdio"     }
sre-common = { path = "../sre-common" }

[dependencies.windows-sys]
version = "0.45"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
]
