[package]
name = "skse64"
version = "2.2.3"
edition = "2021"

[dependencies]
core-util  = { path = "../core-util"  }
cstdio     = { path = "../cstdio"     }
sre-common = { path = "../sre-common" }
libc = "0.2.147"

[dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
]
